--- a/roles/ssh_local/tasks/main.yml
+++ b/roles/ssh_local/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
-  - name: add remarkable to ssh config
+  - name: add reMarkable to ssh config
     blockinfile:
       marker: "### {mark} reMarkable entry by Ansible ###"
       path: ~/.ssh/config
       block: |
-        Host remarkable
+        Host reMarkable
           User root
           Hostname 10.11.99.1
